<resources>
    <string name="app_name">Aquarium Hub</string>

    <string name="menu_login">登入</string>
    <string name="menu_getting_start">開始使用</string>
    <string name="menu_tutorial">使用說明</string>
    <string name="menu_connection_setting">連線設定</string>
    <string name="menu_devices_setting">裝置設定</string>
    <string name="menu_backup">數據備份</string>

    <string name="title_hub">水族箱</string>
    <string name="title_live_stream">即時影像</string>
    <string name="title_status">狀態</string>
    <string name="title_notifications">通知</string>
    <string name="title_setting">設定</string>
    <string name="title_history">歷史紀錄</string>
    <string name="tool_bar">工具列</string>
    <string name="title_ap700">AP700:</string>
    <string name="title_a360">A360:</string>

    <string name="bar_intensity">亮度:</string>
    <string name="bar_color">顏色:</string>

    <string name="coming_soon">Coming soon&#8230;</string>

    <string name="ap700_intensity">AP700: 亮度: %d</string>
    <string name="ap700_color">AP700: 顏色: %d</string>
    <string name="a360_intensity">A360: 亮度: %d</string>
    <string name="a360_color">A360: 顏色: %d</string>

    <string name="client_id">Client ID:</string>
    <string name="status">Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="topic_name">Topic Name</string>
    <string name="subscribe">Subscribe</string>
    <string name="publish">Publish</string>
    <string name="NA">N/A</string>
    <string name="topic">Topic:</string>
    <string name="message">Message:</string>
    <string name="last_message">Last Message:</string>
    <string name="error_message">Error! %s</string>

    <string name="hub_temperature">溫度</string>
    <string name="hub_brightness">亮度</string>
    <string name="hub_lightFrequency">光頻</string>
    <string name="value_temperature">%s °C</string>
    <string name="value_brightness">%s lx</string>
    <string name="value_lightFrequency">%s Hz</string>

    <string name="user_status">%s</string>

    <string name="facebook_app_id">1188126607998146</string>
    <string name="fb_login_protocol_scheme">fb1188126607998146</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">Settings</string>

</resources>
