<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_hub"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_hub" />

    <item
        android:id="@+id/navigation_status"
        android:icon="@drawable/ic_assessment_3x"
        android:title="@string/title_status" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_build_3x"
        android:title="@string/title_setting" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_3x"
        android:title="@string/title_history" />

</menu>
