<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.aquariumhub.test0.MainActivity">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/menu_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_getting_start"
        android:orderInCategory="100"
        android:title="@string/menu_getting_start"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tutorial"
        android:orderInCategory="100"
        android:title="@string/menu_tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connection_setting"
        android:orderInCategory="100"
        android:title="@string/menu_connection_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_devices_setting"
        android:orderInCategory="100"
        android:title="@string/menu_devices_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/menu_backup"
        app:showAsAction="never" />


</menu>
