<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context="net.aquariumhub.myapplication.MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_hub" />

    <VideoView
        android:id="@+id/hub_videoView"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/title_ap700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_ap700" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_ap700_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_intensity" />

        <SeekBar
            android:id="@+id/bar_ap700_intensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_ap700_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_color" />

        <SeekBar
            android:id="@+id/bar_ap700_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_a360"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_a360" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_intensity" />

        <SeekBar
            android:id="@+id/bar_a360_intensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_color" />

        <SeekBar
            android:id="@+id/bar_a360_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
