<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightGray"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/lLayout_tab_hub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/iButton_tab_hub"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_hub_normal"
            android:contentDescription="@string/title_hub"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tv_tab_hub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_hub"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayout_tab_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/iButton_tab_status"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_status_normal"
            android:contentDescription="@string/title_status"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tv_tab_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_status"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayout_tab_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/iButton_tab_setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_setting_normal"
            android:contentDescription="@string/title_setting"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tv_tab_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_setting"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayout_tab_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/iButton_tab_history"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_history_normal"
            android:contentDescription="@string/title_history"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tv_tab_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_history"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--ImageButton
        android:src="@drawable/ic_home_3x"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_margin="5dp"/>

    <ImageButton
        android:src="@drawable/ic_assessment_3x"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_margin="5dp"/>

    <ImageButton
        android:src="@drawable/ic_build_3x"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_margin="5dp"/>

    <ImageButton
        android:src="@drawable/ic_history_3x"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_margin="5dp"/>-->

</LinearLayout>